<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dicoding.picodiploma.storyApp.view.story.AddStoryActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_preview_image"
            android:contentDescription="@string/description"
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toTopOf="@+id/ll_buttons"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/photostory" />

        <LinearLayout
            android:id="@+id/ll_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_preview_image">

            <Button
                android:id="@+id/btn_cameraX"
                android:backgroundTint="@color/purple_700"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/camera"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btn_gallery"
                android:backgroundTint="@color/purple_700"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/gallery"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etl_description"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_marginTop="16dp"
            android:hint="@string/description"
            android:layout_height="200dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:boxBackgroundColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_buttons"
            app:startIconDrawable="@drawable/description">

            <com.dicoding.picodiploma.storyApp.view.customview.MyEditText
                android:id="@+id/et_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:inputType="text"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload"
            android:backgroundTint="@color/purple_700"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etl_description" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>